--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hong Kong Schools Map</title>
+    <title>Hong Kong Schools Map 香港學校位置及資料 2019</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
