--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-hant">
 <head>
     <meta charset="utf-8"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hong Kong Schools Map 香港學校位置及資料 2019</title>
+    <title>香港學校位置地圖 2019 Hong Kong School Location Map </title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
