--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,20 @@
 <html lang="zh-hant">
 <head>
     <meta charset="utf-8"/>
+    <!--  Google Analytics   -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54063804-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'UA-54063804-2');
+    </script>
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no"/>
     <meta name="theme-color" content="#000000"/>
@@ -22,6 +36,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>香港學校位置及资料地圖 2019 Hong Kong School Location Map </title>
+
+
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
