--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>香港學校位置及资料地圖 2019 Hong Kong School Location Map </title>
+    <title>香港學校位置及资料地圖 Hong Kong School Location Map 2019</title>
 
 
 </head>
