Upgraded to Google Analytics 4

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,8 @@
 <html lang="zh-hant">
 <head>
     <meta charset="utf-8"/>
-    <!--  Google Analytics   -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54063804-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GS1FYLJB43"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -13,7 +12,8 @@
         }
 
         gtag('js', new Date());
-        gtag('config', 'UA-54063804-2');
+
+        gtag('config', 'G-GS1FYLJB43');
     </script>
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
